--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "prettier": "^2.4.1",
     "ts-jest": "^27.0.7",
     "typescript": "^4.4.4"
+  },
+  "dependencies": {
+    "jsc8": "^0.16.3"
   }
 }
